# ai-sprint-manager-openenv

./: .dockerignore  .gitattributes  Dockerfile  GUIDE.md  README.md  SETUP.md  baseline_results.txt  client.py  evaluate.py  evaluate_r2.py  inference.py  inference_r2.py  openenv.yaml  plot_results.py  project_client.py  pyproject.toml  requirements.txt  run_baselines.bat  run_concurrent_test.py  server.py  start.sh  train.py  train_llm.py  ui.py
data/: project_data.json  sprint_data.json
results/: r2_evaluation.json
server/: app.py  project_app.py
sprint_env/: __init__.py  data_loader.py  environment.py  graders.py  models.py  project_data_loader.py  project_environment.py  project_grader.py  project_models.py  tasks.py
