[project]
name = "ai-sprint-manager"
version = "1.0.0"
description = "RL environment for agile sprint management - OpenEnv"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn==0.32.1",
    "pydantic==2.10.3",
    "openai",
    "requests",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
include = ["sprint_env*", "server*"]